third_party/move/move-compiler-v2/tests/checking/typing/borrow_field_chain_missing.exp

Diagnostics:
error: field `f` not declared in struct `M::X1`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:7:10
  │
7 │         &x1.f;
  │          ^^

error: unable to infer type: `?1`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:7:10
  │
7 │         &x1.f;
  │          ^^^^

error: field `f` not declared in struct `M::X2`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:8:10
  │
8 │         &x1.x2.f;
  │          ^^^^^

error: unable to infer type: `?5`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:8:10
  │
8 │         &x1.x2.f;
  │          ^^^^^

error: unable to infer type: `?4`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:8:10
  │
8 │         &x1.x2.f;
  │          ^^^^^^^

error: unable to infer type: `?10`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:9:10
  │
9 │         &x1.x2.x3.g;
  │          ^^^^^

error: field `g` not declared in struct `M::X3`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:9:10
  │
9 │         &x1.x2.x3.g;
  │          ^^^^^^^^

error: unable to infer type: `?9`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:9:10
  │
9 │         &x1.x2.x3.g;
  │          ^^^^^^^^

error: unable to infer type: `?8`
  ┌─ tests/checking/typing/borrow_field_chain_missing.move:9:10
  │
9 │         &x1.x2.x3.g;
  │          ^^^^^^^^^^

error: field `f` not declared in struct `M::X1`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:11:10
   │
11 │         &x1_mut.f;
   │          ^^^^^^

error: unable to infer type: `?13`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:11:10
   │
11 │         &x1_mut.f;
   │          ^^^^^^^^

error: field `f` not declared in struct `M::X2`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:12:10
   │
12 │         &x1_mut.x2.f;
   │          ^^^^^^^^^

error: unable to infer type: `?17`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:12:10
   │
12 │         &x1_mut.x2.f;
   │          ^^^^^^^^^

error: unable to infer type: `?16`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:12:10
   │
12 │         &x1_mut.x2.f;
   │          ^^^^^^^^^^^

error: unable to infer type: `?22`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:13:10
   │
13 │         &x1_mut.x2.x3.g;
   │          ^^^^^^^^^

error: field `g` not declared in struct `M::X3`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:13:10
   │
13 │         &x1_mut.x2.x3.g;
   │          ^^^^^^^^^^^^

error: unable to infer type: `?21`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:13:10
   │
13 │         &x1_mut.x2.x3.g;
   │          ^^^^^^^^^^^^

error: unable to infer type: `?20`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:13:10
   │
13 │         &x1_mut.x2.x3.g;
   │          ^^^^^^^^^^^^^^

error: field `f` not declared in struct `M::X1`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:15:14
   │
15 │         &mut x1_mut.f;
   │              ^^^^^^

error: unable to infer type: `?25`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:15:14
   │
15 │         &mut x1_mut.f;
   │              ^^^^^^^^

error: field `f` not declared in struct `M::X2`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:16:14
   │
16 │         &mut x1_mut.x2.f;
   │              ^^^^^^^^^

error: unable to infer type: `?29`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:16:14
   │
16 │         &mut x1_mut.x2.f;
   │              ^^^^^^^^^

error: unable to infer type: `?28`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:16:14
   │
16 │         &mut x1_mut.x2.f;
   │              ^^^^^^^^^^^

error: unable to infer type: `?34`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:17:14
   │
17 │         &mut x1_mut.x2.x3.g;
   │              ^^^^^^^^^

error: field `g` not declared in struct `M::X3`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:17:14
   │
17 │         &mut x1_mut.x2.x3.g;
   │              ^^^^^^^^^^^^

error: unable to infer type: `?33`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:17:14
   │
17 │         &mut x1_mut.x2.x3.g;
   │              ^^^^^^^^^^^^

error: unable to infer type: `?32`
   ┌─ tests/checking/typing/borrow_field_chain_missing.move:17:14
   │
17 │         &mut x1_mut.x2.x3.g;
   │              ^^^^^^^^^^^^^^
